deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: skydreamers-website
  namespace: default
  labels:
    app.kubernetes.io/name: skydreamers-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skydreamers-website
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skydreamers-website
    spec:
      containers:
        - name: skydreamers-website
          image: 1clicktech.registry.jetbrains.space/p/click-capital/oneclickcapital/skydreamers-website:latest
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
