deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: skydreamers-website-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: skydreamers-website
