deployment/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: skydreamers-website-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  tls:
    - hosts:
        - www.skydreamers.club
        - skydreamers.club
      secretName: skydreamers-website-tls
  rules:
    - host: www.skydreamers.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skydreamers-website-service
                port:
                  number: 80
    - host: skydreamers.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skydreamers-website-service
                port:
                  number: 80
